# crunch-numinous

./: Makefile  README.md  pyproject.toml
.github/workflows/: pypi.yml  pytest.yml
numinous/: __init__.py  scoring.py  tracker.py
numinous/cli/: __init__.py  gateway_cmd.py
numinous/cli/gateway_lib/: __init__.py  config.py  manager.py
numinous/examples/: README.md  __init__.py  calibrated_tracker.py  contrarian_tracker.py  geopolitical_tracker.ipynb  keyword_tracker.py  market_tracker.py  quickstart.ipynb
numinous/examples/tournament/: rank1_uid33_fair_dinkum_forecaster.py  rank5_uid140_phi-lips.py  rank7_uid129_17-ensemble2.py  rank8_uid76_Guoly_v3.2.py  rank9_uid135_new-update.py
numinous/examples/tournament/baseline_tracker/: baseline_tracker.py  requirements.txt
numinous/examples/tournament/calibrated_tracker/: calibrated_tracker.py
numinous/examples/tournament/contrarian_tracker/: contrarian_tracker.py
numinous/examples/tournament/drunken_bard/: drunken_bard.py  tracker.py
numinous/examples/tournament/ensemble2/: tracker.py
numinous/examples/tournament/fair_dinkum_forecaster/: tracker.py
numinous/examples/tournament/guoly_v32/: tracker.py
numinous/examples/tournament/kai_v323/: requirements.txt  tracker.py
numinous/examples/tournament/kaiaby_v41/: tracker.py
numinous/examples/tournament/keyword_tracker/: keyword_tracker.py
numinous/gateway/: .env.example  API_REFERENCE.md  Dockerfile  PRICING.md  app.py  defaults.env  error_handler.py  rate_limit.py  rate_limit_log.py  retry.py
numinous/gateway/models/: numinous_client.py  numinous_indicia.py  openrouter.py  vericore.py
numinous/gateway/providers/: chutes.py  desearch.py  numinous_indicia.py  openai.py  openrouter.py  perplexity.py  vericore.py
numinous/schemas/: README.md
tests/: test_examples.py  test_scoring.py  test_tracker.py
(+10 files in other folders)
