[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "crunch-numinous"
version = "0.6.0"
description = "Numinous Crunch Starter Package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "click",
    "rich",
    "fastapi",
    "uvicorn",
    "aiohttp",
    "python-dotenv",
    "httpx",
    "ipykernel",
]

[project.scripts]
crunch-numinous = "numinous.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["numinous"]

[tool.pytest.ini_options]
testpaths = ["tests"]
